# ecomerce-RAG-chatbot-assistant

./: .gitignore  Makefile  docker-compose.yml  env.example  main.py  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/agents/: retrieval_generation.py
apps/api/api/: endpoints.py  middleware.py  models.py
apps/api/evals/: eval_retriever.py
apps/api/src/agents/: retrieval_generation.py
apps/api/src/agents/prompts/: retrieval_generation.yaml
apps/api/src/agents/prompts/utils/: prompt_managment.py
apps/api/src/api/: app.py  endpoints.py  models.py
apps/api/src/api/core/: config.py
apps/chatbot_ui/: Dockerfile  pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
apps/chatbot_ui/src/chatbot_ui/core/: config.py
