[project]
name = "end-to-end-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.134.0",
    "google-genai>=1.65.0",
    "groq>=1.0.0",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "langsmith>=0.7.12",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
]

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/chatbot_ui",
]

[dependency-groups]
dev = [
    "cohere>=5.20.7",
    "fastembed>=0.4.0; sys_platform == \"linux\"",
    "langgraph>=1.0.10",
    "langsmith>=0.7.12",
    "matplotlib>=3.10.8",
    "qdrant-client>=1.17.0",
    "ragas>=0.4.3",
]

[tool.uv]
# Require Linux x86_64 (Docker) so lockfile has wheels for containers; fastembed/onnxruntime only installed on Linux
required-environments = [ "sys_platform == 'linux' and platform_machine == 'x86_64'" ]
