[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mishal Qamar", email = "mishalqamar@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.20.7",
    "fastapi>=0.134.0",
    "fastembed>=0.4.0; sys_platform == \"linux\"",
    "google-genai>=1.65.0",
    "groq>=1.0.0",
    "instructor>=1.14.5",
    "langsmith>=0.7.12",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.0",
    "uvicorn>=0.41.0",
]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
shared = {workspace = true}

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md"
]
